# myDiscord

./: .gitignore  CMakeLists.txt  connexion_module.c
assets/: style.css
include/: chat_app.h  client.h  command.h  connexion_module.h  database.h  myHeader.h  server.h  user.h
src/: authentication_window.c  chat_app.c  client.c  command.c  connexion_module.c  database.c  main.c  myHeader.c  server.c  user.c  user.h
